--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,18 @@
-# xcode noise
-build/*
-*.pbxuser
-*.mode1v3
-*.perspectivev3 
-
 # osx noise
 .DS_Store
-DFN.xcodeproj/project.xcworkspace/xcuserdata/paweljankowski.xcuserdatad/UserInterfaceState.xcuserstate
-DFN.xcodeproj/project.xcworkspace/xcuserdata/paweljankowski.xcuserdatad/WorkspaceSettings.xcsettings
-DFN.xcodeproj/xcuserdata/paweljankowski.xcuserdatad/xcschemes/DFN.xcscheme
-DFN.xcodeproj/xcuserdata/paweljankowski.xcuserdatad/xcschemes/xcschememanagement.plist
+profile
+
+# xcode noise
+build/*
+*.mode1
+*.mode1v3
+*.mode2v3
+*.perspective
+*.perspectivev3
+*.pbxuser
+*.xcworkspace
+xcuserdata
+
+# svn & cvs
+.svn
+CVS
